--- a/examples/throw-money.htm
+++ b/examples/throw-money.htm
@@ -15,14 +15,14 @@ Released under the GPLv3 License
 <span class="grav" style="position:absolute;background-color:red; height:100px; width:100px; bottom:0px;right:100px;font-size:80pt;">M</span>
 
 
-<img class="grav" src="http://throw-platform.github.com/img/money.png" border="0" style="position:absolute;top:50px;">
-<img class="grav" src="http://throw-platform.github.com/img/money.png" border="0" style="position:absolute;top:50px;">
-<img class="grav" src="http://throw-platform.github.com/img/money.png" border="0" style="position:absolute;top:50px;">
-<img class="grav" src="http://throw-platform.github.com/img/money.png" border="0" style="position:absolute;top:50px;">
-<img class="grav" src="http://throw-platform.github.com/img/money.png" border="0" style="position:absolute;top:50px;">
-<img class="grav" src="http://throw-platform.github.com/img/money.png" border="0" style="position:absolute;top:50px;">
-<img class="grav" src="http://throw-platform.github.com/img/money.png" border="0" style="position:absolute;top:50px;">
-<img class="grav" src="http://throw-platform.github.com/img/money.png" border="0" style="position:absolute;top:50px;">
+<img class="grav" src="http://throw-platform.github.io/img/money.png" border="0" style="position:absolute;top:50px;">
+<img class="grav" src="http://throw-platform.github.io/img/money.png" border="0" style="position:absolute;top:50px;">
+<img class="grav" src="http://throw-platform.github.io/img/money.png" border="0" style="position:absolute;top:50px;">
+<img class="grav" src="http://throw-platform.github.io/img/money.png" border="0" style="position:absolute;top:50px;">
+<img class="grav" src="http://throw-platform.github.io/img/money.png" border="0" style="position:absolute;top:50px;">
+<img class="grav" src="http://throw-platform.github.io/img/money.png" border="0" style="position:absolute;top:50px;">
+<img class="grav" src="http://throw-platform.github.io/img/money.png" border="0" style="position:absolute;top:50px;">
+<img class="grav" src="http://throw-platform.github.io/img/money.png" border="0" style="position:absolute;top:50px;">
 
 
 
