--- a/examples/throw-cellphone.htm
+++ b/examples/throw-cellphone.htm
@@ -8,10 +8,10 @@ Released under the GPLv3 License
 
 
 
-<img class="grav" src="http://throw-platform.github.com/img/brick.png" style="bottom:0px;right:100px;position:absolute;">
-<img class="grav" src="http://throw-platform.github.com/img/brick.png" style="bottom:128px;right:100px;position:absolute;">
-<img class="grav" src="http://throw-platform.github.com/img/brick.png" style="bottom:256px;right:100px;position:absolute;">
-<img class="grav" src="http://throw-platform.github.com/img/brick.png" style="bottom:384px;right:100px;position:absolute;">
+<img class="grav" src="http://throw-platform.github.io/img/brick.png" style="bottom:0px;right:100px;position:absolute;">
+<img class="grav" src="http://throw-platform.github.io/img/brick.png" style="bottom:128px;right:100px;position:absolute;">
+<img class="grav" src="http://throw-platform.github.io/img/brick.png" style="bottom:256px;right:100px;position:absolute;">
+<img class="grav" src="http://throw-platform.github.io/img/brick.png" style="bottom:384px;right:100px;position:absolute;">
 
 
 
